@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.52-1lsb3.2.i486.rpm 3515561 BLAKE2B 18f62f9214c94cddce81c69aa86d5ad545716f54f88fc2aefa66f28d1fec0fe502880776dfdf7deb46431fe9c928e14c60a33e2e287bfeb353640693b1cc9633 SHA512 e037df5f4cc7407bc3a7b6e141a502ef15348e2aaa70630104876e898594459b9197d98923f6273b84646910eb3109b444cf956f58d9224e9e93f7b46b8eb82a
-DIST epson-inkjet-printer-escpr2-1.1.52-1lsb3.2.x86_64.rpm 3515117 BLAKE2B 8c81f70f4ba2fbe10588261e1e8bfd3be0ec4ebabca28a1fd7e271ba3d70eaf9f7a0c3f4af1620c4002bafe438b433b930b5b6a8a1457ea64a663a7ff593db51 SHA512 e6972e268b08e19ebb5edb26dbce21128bb36978dbafab310baf1d3d68064ecadfd2502e1f98be148b0e32fd9e40363cbb98c0fd18b10d19dbd5057e414cb3e5
 DIST epson-inkjet-printer-escpr2-1.1.53-1lsb3.2.i486.rpm 3557948 BLAKE2B 5c135048fe4b4b1a7d6503c7f313baaf7c31a4582d29569023e67fca9a6e793ff1f48bd9e24cb707a57153e22ec8669934307193c3dd3f9009ff43cf3dff3575 SHA512 e3ef3174a1bfff4c66e318cc27650607cf9af7dea107bc56adee81ffdcbee4a13a68bd2ed8641f837b7db1937ee3fab3fe243c84380c671724bd083daadda638
 DIST epson-inkjet-printer-escpr2-1.1.53-1lsb3.2.x86_64.rpm 3557459 BLAKE2B 5f538657a6491697debee838ef95357d0b057e478c8958fdfd0cd0700cea8f270a4fb4d15944346ac909e8eccc38a92300e3f4572f475c3dfa233a1bea91e91d SHA512 909edc9a9e097bc8f6f16cd011b5c679b1f1188a2c403c6ad1515362f72666f96978c30a1fbfdc9ddd1eb72801885822aab43792c18fa4f1797f4614043cb958
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.52.ebuild 1670 BLAKE2B d1ff175139a1226586cc8059559971e7d7b003c96e9afab13721099d0bcf81b6e81811909447c2dbe62f6120a7614f5a507f2c89a40c6b31d7d00fd39724f161 SHA512 4d9a3a0fa0db4516c174d12081e7c7406c11719ad8b7bd6a90403c1c700198d8baebb371e55c008379838042d148204f9a26690124d6aa91f4c6fe2d60b106a8
+DIST epson-inkjet-printer-escpr2-1.1.54-1lsb3.2.i486.rpm 3567002 BLAKE2B 371c7f8419e00cf98a9e9f55223a41a66a68bb1d8f39eab97000c5a5f71343227fb65c41c6726163849250936e512217756cffda2fa3dac8556faec7a1ff5161 SHA512 277c344f6fe6b29d48f743fa6450070b8ceb83b0e1b07ae3fdd16336e3a63ba7bf2f3705b9185623aba5e5d8dad6b30e2fb733b22cb785750e42f2d9e2fc43ce
+DIST epson-inkjet-printer-escpr2-1.1.54-1lsb3.2.x86_64.rpm 3566506 BLAKE2B f1d9452fb501e2b32a952e5756b9267282f919c835cabe16eb66ed01a8dc2545251f40d1c0216c49efc72da2c6ba14084b38f7aa4d3248dfcc2489319eb1446e SHA512 b570d8e163f346050be6c1aaa73d11b5710302f68a1938d342e4bc9d62ab89726b835c8a511c957129571747b301555d3f74fbfb91b7fcc40fad0f9654b71072
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.53.ebuild 1670 BLAKE2B 8d8746ee54aae39488a800aee2873a081278433b76fcd04096c82dc407398c000b5d95d5c504d9819ff44e4fe3544fde82e6f59034a0dd9c6a7a3d02a768a2b1 SHA512 40aad9451dd13f9370e5d3b11e49ced6fd1242484c4136c8809bb1ccb2184c5317ebfb0c7c07955947c300cc6803442411213e26ba59387fc93495d446f3cc89
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.54.ebuild 1670 BLAKE2B 232aab99a4fe63f20c8185d1b1c6cfeb8690cbda83cd00cad9c4aa74879a822e859db79eddf6da16f96a44407340e3ba1848a4bc46034d37837d8441ad0892de SHA512 5a48494943a54920e44ddfe6343e7c0b4cd756ae6ac008dd0cc2dce3c898e201c794f26bece87fea3d352159102baae81f4f16c1ccf3f73f89e0cd317438021d
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
