@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.52.tar.gz 4867917 BLAKE2B 95f77f6d9b283e24a88a671e75fdac236d29cb7df7663d6a38be4a88bcf498d14a5dc1cc129894f092d6bafc6a2466f882612f0ae13430cfc64dfb70ec85d0aa SHA512 b2be6af8cda3b4d40430f239001323ed11c97f0f9309b7e76cf520f5261f264bdc994493d770bec0117ca0ad07730d4aeaa6b9297ed185c4d8efe61bac80f9f5
 DIST epson-inkjet-printer-escpr2-1.1.53.tar.gz 4886302 BLAKE2B f8455f97b3e5db661960117292453d3f9eaf8891e6f4b44cfce4ab82a8ae36fc3b5df86468b8efb49489b0f2cdbdde1ce9d602302f4fe207d98e624a84e54023 SHA512 e2239769c80306cb9a51139dae3201fe4d6755722d82aa660ea2d0177a868e236fe59dbbf52559fb45565bdd2a81c8cccfcf9ea2af237e9b2f85ba63f53c38e7
-EBUILD epson-inkjet-printer-escpr2-1.1.52.ebuild 1319 BLAKE2B 775ad113642aff00f4ce52932393e868f1d30c94642d6950c1caad014af01e500b699fce5ca4f4383cb147f07f9bae2838676516fbe31d332b9e466b2b1c5066 SHA512 70df40d680f0acb109fe7fb8989f1615bead7ff74cdab1cdfd77addbbc62b9ba0991e60c07f7c5799fdce9e2bdc9415ec166247e8fc4e777febf3663501ff546
+DIST epson-inkjet-printer-escpr2-1.1.54.tar.gz 4926549 BLAKE2B f8e1167ede75b0735facda27e4542a58690097589881db01e5a3b3d98c245f2ca6e4bd93a41acdcfadf6c16f895bf79a792e84b8337ffa049b30902a3cd1a96b SHA512 932c87eca1c26e4e10660cbc35eeb4f1f01b069e419433589a87bf1205e52e54b137cc49d98bcedcad1106313ddaa9bc7afa5d327991eb4ed9d43a23ec2c87ec
 EBUILD epson-inkjet-printer-escpr2-1.1.53.ebuild 1319 BLAKE2B 10740e86382ed6e9863bd6369e2c6300ee4c2891331fc076f33db6781beafc373346e325b509df9b6b17f2399daf8bffa45a70af7060df8d559d03a9f2cd06a4 SHA512 232a0363910826eeb02ea71be42290c7eeddfb33c5f4afdbd192565255720c01bd4415c91401007220cd5a998e67c6ae5126f2e2208c31cf48fa7ee3791a7a30
+EBUILD epson-inkjet-printer-escpr2-1.1.54.ebuild 1319 BLAKE2B 806a82e8d41fcb0444c2c45ac14ef1b90fba57e2d57af44245a3cd1e2aeb522ef8d9b06e49f47dc70c02fbd6ad2acb148043ab1bc389ba42768340b0c6fe4f3c SHA512 c7d026c458743b505f47c6160297c9d9b00a4a9d006fac80a874bdcf80cec7eede3b5b1c92c617641d33e55139174988c254e426569d42ed0315bc795543ac63
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
